--- a/css/styles.css
+++ b/css/styles.css
@@ -15,12 +15,27 @@ html{
   margin: 3px;
 }
 .home p{
-  padding: 2px;
-  padding-bottom: 220px;
+  padding: 5px;
+  padding-bottom: 200px;
 }
 #logo{
-  margin-top: 120px;
+  margin-top: 80px;
   width: 80px;
   height: 80px;
   padding bottom: 10px;
+}
+#mouse{
+  padding-bottom: 20px;
+  animation: bounce 3s infinite;
+}
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-55px);
+  }
+  60% {
+    transform: translateY(-45px);
+  }
 }
