Added a description and an icon div to the development row

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,9 +66,9 @@ html{
 .what-we-do{
   padding-top: 40px;
 }
-.design{
+.descripion{
   text-align: center;
 }
-.design-icon{
+.icon{
   text-align: center;
 }
