Added a desplay property of none to the descriptions in the what-we-do section

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,10 @@ html{
 }
 .descripion{
   text-align: center;
+  padding-top: 20px;
+  display: none;
 }
 .icon{
   text-align: center;
+  padding-top: 20px;
 }
