--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -586,7 +586,7 @@ pre code {
 }
 
 .row {
-  display: -ms-flexbox;
+  display: -ms-box;
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
