--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Comfortaa|Poiret+One|Raleway|Ubuntu+Mono&display=swap');
 html{
   scroll-behavior: smooth;
 }
@@ -60,7 +61,7 @@ html{
   padding-top: 100px;
   padding-bottom: 85px
 }
-#wedo{
+h2{
   text-align: center;
 }
 .what-we-do{
@@ -90,4 +91,82 @@ text-align: center;
 .col-md-3 img{
   max-width: 100%;
   max-height: 100%;
+}
+.contacts {
+    background-image: url('../images/backgrounds/c_image.jpg');
+    background-size: cover;
+}
+
+.contacts h1 {
+    position: relative;
+    top: 30px;
+}
+.text{
+    margin-bottom: 20px;
+}
+
+.contact-overlay {
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.form-control{
+    background-color: #66000000;
+    color: white;
+}
+.input{
+    margin-top: 30px;
+}
+.b-text{
+    font-family: 'Comfortaa', cursive;
+}
+.m-text{
+    font-family: 'Raleway', sans-serif;
+}
+.name{
+    margin-right: 5px;
+}
+input.error {
+    border: 1px dashed red;
+    font-weight: 300;
+    color: red;
+}
+.email{
+    margin-right: 5px;
+}
+.social{
+    justify-content:center;
+    padding-left:10px;
+    padding-right:10px;
+}
+.white{
+    height: 300px;
+    width: 366px;
+    background-color: rgba(255, 255, 255, 0.5);
+    display: none;
+}
+.img-fluid{
+    max-width: 100%;
+    height: auto;
+}
+.portimg {
+    float: right;
+    position: relative;
+    margin: 5px;
+}
+.portimg .porttext {
+    display: none;
+    opacity: 1;
+    background-color:rgba(255, 255, 255, 0.6);
+    width: auto;
+    position: absolute;
+    bottom: 0;
+    color: deepskyblue;
+    text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+    padding: 30px;
+    height: 100%;
+}
+textarea::placeholder{
+    color: #ffffff;
 }
