--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@ h2{
 }
 .portfolio{
   padding-top: 40px;
-  padding-bottom: 40px;
+  padding-bottom: 100px;
 }
 #portfolio{
 flex-wrap: wrap;
@@ -170,4 +170,20 @@ input.error {
 }
 textarea::placeholder{
     color: #ffffff;
+}
+
+#one, #two, #three, #four, #five, #six, #seven, #eight{
+  display: none;
+  color: black;
+  width: 100%;
+  height: 100%;
+  background-color:rgba(255, 255, 255, 0.456);
+  position:absolute;
+  top: 1px;
+  font-weight: bold;
+  text-align: center center;
+  font-size: 30px;
+  padding-top: 30%;
+  padding-right: 30px;
+  font-family: 'Delius Swash Caps', cursive;
 }
